# actix-web

./: .env  .gitignore  Cargo.toml  README.md  compiler.sh
.run/: Run.run.xml  prod.run.xml
src/: main.rs
src/application/: bean.rs  mod.rs  not_std.rs
src/controller/: api.rs  mod.rs  open_api.rs
src/mapper/: example.html
